# lightning

./: .gitignore  .msggen.json  .version  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-release-tag.yml  ci.yaml  coverage-nightly.yaml  crate-bump.yml  docker-build.yml  docker-publish.yml  docker-release.yml  macos.yaml  pypi-build.yml  pypi-publish.yml  pypi.yml  python-docs-nightly.yaml  rdme-docs-sync.yml  readme-rpc-sync.yml  release-build.yml  release-publish.yml  release.yml  repro.yml  rust-msrv.yml
cln-grpc/: Cargo.toml
cln-grpc/proto/: node.proto  primitives.proto
cln-grpc/src/: convert.rs  lib.rs  pb.rs  server.rs
cln-rpc/: Cargo.toml
cln-rpc/src/: hooks.rs  lib.rs  model.rs  primitives.rs
contrib/msggen/msggen/: model.py  patch.py  schema.json
contrib/msggen/msggen/utils/: utils.py
contrib/pyln-client/: pyproject.toml
contrib/pyln-client/pyln/client/: __init__.py
contrib/pyln-grpc-proto/pyln/grpc/: node_pb2.py  node_pb2_grpc.py  primitives_pb2.py
contrib/pyln-proto/: pyproject.toml
contrib/pyln-proto/pyln/proto/: __init__.py
contrib/pyln-spec/bolt1/: pyproject.toml
contrib/pyln-spec/bolt2/: pyproject.toml
contrib/pyln-spec/bolt4/: pyproject.toml
contrib/pyln-spec/bolt7/: pyproject.toml
contrib/pyln-testing/: pyproject.toml
contrib/pyln-testing/pyln/testing/: __init__.py  fixtures.py  grpc2py.py  utils.py
contrib/reprobuild/: Dockerfile.jammy  Dockerfile.noble  Dockerfile.resolute
doc/: Makefile  index.rst  lightningd-config.5.md  reckless.7.md
doc/getting-started/getting-started/: installation.md
doc/schemas/: lightning-setconfig.json  reckless.json  wait.json
doc/schemas/hook/: commitment_revocation.json  custommsg.json  db_write.json  invoice_payment.json  openchannel.json  openchannel2.json  peer_connected.json  rbf_channel.json  recover.json  rpc_command.json
lightningd/: wait.c
plugins/: Cargo.toml  Makefile
plugins/bip353-plugin/: Cargo.toml
plugins/bip353-plugin/src/: main.rs
plugins/clnrest-rs-plugin/: Cargo.toml
plugins/clnrest-rs-plugin/src/: shared.rs
plugins/currencyrate-plugin/: Cargo.toml
plugins/currencyrate-plugin/src/: main.rs  oracle.rs
plugins/grpc-plugin/: Cargo.toml
plugins/grpc-plugin/src/: hooks.rs  main.rs  tasks.rs  util.rs
plugins/lsps-plugin/: Cargo.toml
plugins/reckless-plugin/src/: installers.rs  structs.rs  util.rs
plugins/reckless-plugin/src/cmds/: enable.rs  install.rs  list.rs  source.rs  tip.rs  update.rs
plugins/rest-plugin/: Cargo.toml
plugins/src/: lib.rs
plugins/wss-proxy-plugin/: Cargo.toml
plugins/xpay/: xpay.c
proto/: fixproto.sh  hold_pb2.py  hold_pb2_grpc.py  node_pb2.py  node_pb2_grpc.py  primitives_pb2.py
src/: config.rs  hold.rs  hooks.rs  main.rs  model.rs  pb.rs  server.rs  util.rs
tests/: holdinvoicetest.py  test_askrene.py  test_cln_rs.py  test_clnrest.py  test_clnrest_rs.py  test_connection.py  test_currencyrate.py  test_misc.py  test_plugin.py  test_reckless.py  test_wallet.py
tools/: build-release.sh  reckless  repro-build.sh
