[package]
edition = "2021"
name = "holdinvoice-grpc"
version = "0.2.1"

[[bin]]
name = "cln-grpc-hold"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rand = "0.8"
rcgen = { version = "0.11", features = ["pem", "x509-parser"] }

cln-grpc = "0.1.4"
cln-plugin = "0.1.5"
cln-rpc = "0.1.4"

hex = "0.4.3"
bitcoin = { version = "0.29", features = [ "serde" ] }
lightning-invoice = "0.24"

[dependencies.tokio]
features = ["fs","net", "rt-multi-thread"]
version = "1"

[dependencies.tonic]
features = ["tls", "transport"]
version = "0.9"

[build-dependencies]
tonic-build = "0.9"