[package]
name = "cln-bip353"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "BIP-353 lookups"
homepage = "https://github.com/ElementsProject/lightning/tree/master/plugins"
repository = "https://github.com/ElementsProject/lightning"
rust-version.workspace = true

[dependencies]
anyhow = "1"
bytes = "1"
log = { version = "0.4", features = ['std'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"

log-panics = "2"

cln-plugin = { workspace = true }

# bitcoin-payment-instructions = { version = "0.5.0", features = ["http"] }
bitcoin-payment-instructions = { path = "../../../bitcoin-payment-instructions", features = [
    "http",
    "http_proxied",
] }

# reqwest = { version = "0.11", default-features = false, features = [
#     "rustls-tls",
#     "socks",
# ] }
bitreq = { git = "https://github.com/FreeOnlineUser/corepc", branch = "socks5-proxy", default-features = false, features = [
    "proxy",
] }

bitcoin = { version = "0.32", default-features = false }
