[tool.poetry]
name = "pyln-bolt1"
version = "1.0.2.246"
description = ""
authors = ["Rusty Russell <rusty@blockstream.com>"]
license = "MIT"

packages = [
  { include = "pyln/spec/bolt1" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pyln-proto = { path = "../../pyln-proto", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
