[tool.poetry]
name = "pyln-bolt2"
version = "1.0.3.246"
description = "A pure python implementation of BOLT2"
authors = ["Rusty Russell <rusty@blockstream.com>"]
license = "MIT"

packages = [
  { include = "pyln/spec/bolt2" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pyln-proto = { path = "../../pyln-proto", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
