[tool.poetry]
name = "pyln-bolt7"
version = "1.0.4.246"
description = "BOLT7"
authors = ["Rusty Russell"]
license = "BSD-MIT"

packages = [
  { include = "pyln/spec/bolt7" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pyln-proto = { path = "../../pyln-proto", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
